[package]
name = "rs-practice"
edition = "2021"
license = "MIT"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "my_hey"
path = "load-tester/main.rs"

[[bin]]
name = "kv_server"
path = "kv-store/main.rs"

[[bin]]
name = "markdown_preview"
path = "markdown-wasm/main.rs"

[[bin]]
name = "todo_api"
path = "todo-api/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
