[package]
name = "rs-practice"
edition = "2021"
license = "MIT"
version = "0.1.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "my_hey"
path = "load-tester/main.rs"

[[bin]]
name = "kv_server"
path = "kv-store/main.rs"

[[bin]]
name = "markdown_preview"
path = "markdown-wasm/main.rs"

[[bin]]
name = "todo_api"
path = "todo-api/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wasm-bindgen = "0.2"
