[package]
name = "auto-lifetime"
version = "0.1.0"
edition = "2021"
description = "Procedural macro that automatically annotates all reference types in a struct/enum with a single shared lifetime."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
