[package]
name = "load-tester"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "my_hey"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
reqwest.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
