[package]
name = "markdown-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "markdown_preview"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tower-http.workspace = true
wasm-bindgen.workspace = true
